--- a/RS/config/packages/security.yaml
+++ b/RS/config/packages/security.yaml
@@ -16,6 +16,16 @@ security:
             security: false
         main:
             anonymous: lazy
+            
+            provider: app_user_provider
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path: logout 
+                target: home
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
